# fmat-requestbot

./: Cargo.toml  Makefile  README.org  stats-created.sql  stats-requests.sql  stats-tasks.sql
entity/: Cargo.toml
entity/src/: archive_rule.rs  delivery.rs  delivery_item.rs  lib.rs  prelude.rs  request.rs  request_schedule.rs  task.rs  user.rs
migration/src/: lib.rs  m20231208_203518_create_request_table.rs  m20231209_000613_create_archive_rules_table.rs  m20231209_005830_add_request_channel.rs  m20231209_013836_add_request_thumbnail.rs  m20231219_195822_add_request_archival_flag.rs  m20231219_210033_add_request_expiration_timer.rs  m20231219_222103_add_request_schedule.rs  m20240224_144248_add_delivery.rs  m20240715_180531_add_discord_guild.rs
src/: expiration_controller.rs  main.rs  schedule_controller.rs  utils.rs
