[package]
name = "fmat-requestbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive", "env"] }
entity = { version = "0.1.0", path = "entity" }
migration = { version = "0.1.0", path = "migration" }
sea-orm = "0.12.4"
serde_json = "1.0.108"
serenity = { version = "0.11.5", default-features = false }
slashery = { git = "https://github.com/nightkr/slashery", version = "0.1.0" }
snafu = "0.7.5"
time = "0.3.30"
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }

[workspace]
members = ["migration", "entity"]
